# tmdb-hs

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cabal.project  tmdb.cabal
src/Network/: Tmdb.hs
src/Network/Tmdb/: API.hs  Client.hs  IO.hs  Types.hs
src/Network/Tmdb/API/: Discover.hs  Movie.hs  Search.hs  Tv.hs
src/Network/Tmdb/Types/: Common.hs  Discover.hs  Error.hs  Image.hs  Language.hs  Movie.hs  Search.hs  Tv.hs
test/Test/Tmdb/Types/: CommonSpec.hs  ErrorSpec.hs  LanguageSpec.hs  MovieSpec.hs  SearchSpec.hs  TvSpec.hs
