cabal-version:   3.0
name:            tmdb
version:         0.1.0.0
synopsis:        TMDB API client for Haskell
description:
  A pure Haskell client library for the TMDB (The Movie Database) API.
  Provides type-safe API bindings using servant-client.

license:         MIT
license-file:    LICENSE
author:          birdgg
maintainer:      birdgg
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/birdgg/tmdb-hs.git

library
  exposed-modules:
    Network.Tmdb
    Network.Tmdb.API
    Network.Tmdb.API.Discover
    Network.Tmdb.API.Movie
    Network.Tmdb.API.Search
    Network.Tmdb.API.Tv
    Network.Tmdb.Client
    Network.Tmdb.Types
    Network.Tmdb.Types.Common
    Network.Tmdb.Types.Discover
    Network.Tmdb.Types.Error
    Network.Tmdb.Types.Image
    Network.Tmdb.Types.Language
    Network.Tmdb.Types.Movie
    Network.Tmdb.Types.Search
    Network.Tmdb.Types.Tv

  build-depends:
    , aeson                >=2.1
    , base                 >=4.16 && <5
    , bytestring           >=0.11
    , country              >=0.2
    , http-api-data        >=0.5
    , http-client          >=0.7
    , http-client-tls      >=0.3
    , http-types           >=0.12
    , servant              >=0.20
    , servant-client       >=0.20
    , servant-client-core  >=0.20
    , text                 >=2.0
    , time                 >=1.9

  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

test-suite tmdb-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2021
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  build-depends:
    , aeson
    , base           >=4.16 && <5
    , bytestring
    , country        >=0.2
    , hspec          >=2.10
    , http-api-data  >=0.5
    , text
    , time
    , tmdb

  build-tool-depends:
    hspec-discover:hspec-discover >=2.10

  other-modules:
    Test.Tmdb.Types.CommonSpec
    Test.Tmdb.Types.ErrorSpec
    Test.Tmdb.Types.LanguageSpec
    Test.Tmdb.Types.TvSpec
    Test.Tmdb.Types.MovieSpec
    Test.Tmdb.Types.SearchSpec
